# trading-project

./: .gitignore  CORE-README(math-engine).md  MODULE_MANAGER_EXPLANATION.md  index.html  package-lock.json  package.json  stats.html  vite.config.js.timestamp-1775344763389-20f9edc5e8b238.mjs
BACKEND/: config.py
BACKEND/backend/: CMakeLists.txt  broadcast_manager.py  chart_manager.py  config.py  connector.py  main_launcher.py  message_handler.py  strategy_ma_crossover.py  strategy_manager.py  trade_handler.py  websocket_server.py
BACKEND/backend/include/: broadcast_manager.hpp  candle.hpp  chart_manager.hpp  config.hpp  connector_bridge.hpp  message_handler.hpp  symbol_cache.hpp  trade_handler.hpp  websocket_server.hpp
BACKEND/backend/src/: main.cpp
BACKEND/src/: core-plugin.ts  index.ts  types.ts
BACKEND/src/api/: public-api.ts
BACKEND/src/interaction/: interaction-manager.ts
BACKEND/src/model/: base-line-tool.ts
BACKEND/src/rendering/: generic-renderers.ts
BACKEND/src/utils/: culling-helpers.ts  geometry.ts
BACKEND/src/views/: line-tool-price-axis-label-view.ts  line-tool-time-axis-label-view.ts  price-axis-view.ts
config/: startup.json
lightweight-charts-line-tools-circle/src/views/: LineToolCirclePaneView.ts
lightweight-charts-line-tools-rectangle/src/views/: LineToolRectanglePaneView.ts
src/: main.ts
src/calendar/: calendar.css
src/chart/: chart-core.ts  chart-data-manager.ts  chart-types.ts  chart-utils.ts  chart.css
src/chart/chart-engine/: chart-state.ts  main-chart.ts  series-manager.ts
src/chart/drawingtools/: (New)DRAWING TOOLS readme.md  chart-drawing.ts  drawing-persistence.ts  drawing-tf-manager.ts  strategy-drawing-manager.ts  tool-properties-modal.ts
src/chart/indicator/: indicator-manager.ts
src/core/: connection-manager.ts  global.css  module-manager.ts  symbol-icons.ts  tab-manager.ts
src/journal/: journal-mini.css  journal-mini.html  journal-mini.ts  journal-modal.html  journal.css  journal.ts
src/notification/: notification-modal.html  notification.css  notification.ts
src/panel/: panel.css  panel.html  panels-module.ts
src/strategies/: strategy-module.ts  strategy.css
src/strategy/: strategy-module.ts  strategy.css  strategy.html
src/trading/: positions-modal.css  positions-modal.ts  trading-panel.ts  trading-settings-modal.css  trading-settings-modal.html  trading-settings.ts  trading.css  trading.html  trading.ts
src/watchlist/: watchlist-module.ts  watchlist.css
(+13 files in other folders)
